tests/fixtures/invalid/round_dict_list.py
# Cannot call round() with Dict[str, int], List[int]
x = round({"a": 1}, [1, 2, 3])
